# Stone-Detection

./: README(github).hwp
2nd/code(github)/: CMakeLists.txt  README(github).hwp  robot.cpp  run
Stoen detection/: CMakeLists.txt  run  skip.cpp
Stoen detection/video/: 1.vol12.egg
